--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha test/region.test.js",
     "dev": "node --watch app.js"
   },
   "author": "champico",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "5.1.1",
     "cookie-parser": "1.4.7",
     "cors": "2.8.5",
+    "dotenv": "16.4.5",
     "express": "4.21.1",
     "jsonwebtoken": "9.0.2",
     "mysql2": "3.11.4",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5"
+    "chai": "^5.1.2",
+    "chai-http": "^5.1.1",
+    "mocha": "^10.8.2",
+    "sinon": "^19.0.2"
   }
 }
